--- a/styles.css
+++ b/styles.css
@@ -21,12 +21,14 @@ body {
 }
 header {
   background-color: var(--header-black);
-  position: fixed;
   width: 100vw;
   right: 0;
   left: 0;
-  box-shadow: 0px 1px 5px var(--gray);
+  border-bottom: 1px solid var(--gray);
   z-index: 999;
+}
+.navbar{
+  width: 100vw;
 }
 .navlink{
   border-left: 1px solid var(--gray);
@@ -45,7 +47,7 @@ a:visited {
 }
 .menu-icon {
 	position: absolute;
-  right: 4px;
+  right: 0px;
   margin: 4px;
 	width: 50px;
 	height: 50px;
@@ -277,6 +279,7 @@ section {
   margin: 20px auto;
   color: var(--header-black);
   width: 24vw;
+  min-width: 120px;
   padding: 20px;
 }
 .card-img-top{
