--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-:root{
+:root {
   --padding: padding: 40px;
   --padding-top: padding-top: 20px;
   --gray: #4d4d4d;
@@ -6,12 +6,14 @@
   --header-black: #242529;
   --section-font-size: font-size: 18px;
 }
+
 html {
   box-sizing: border-box;
   margin: 0px;
   padding: 0px;
   scroll-behavior: smooth;
 }
+
 body {
   margin: 0;
   padding: 0;
@@ -19,21 +21,18 @@ body {
   font-family: "Mulish", sans-serif;
   background: linear-gradient(to right, var(--white) 50%, var(--gray) 50%);
 }
+
 header {
   background-color: var(--header-black);
-  width: 100vw;
-  right: 0;
-  left: 0;
   border-bottom: 1px solid var(--gray);
   z-index: 999;
 }
-.navbar{
-  width: 100vw;
-}
-.navlink{
+
+.navlink {
   border-left: 1px solid var(--gray);
   padding: 20px;
 }
+
 a:link,
 a:visited {
   text-decoration: none;
@@ -41,98 +40,123 @@ a:visited {
   font-weight: bold;
   position: relative;
 }
-.nav-links a:hover {
+
+.nav-links-mobile {
+  width: 30vw;
+  position: absolute;
+  right: 0px;
+  top: 56px;
+  z-index: 999;
+  background-color: var(--header-black);
+  display: flex;
+  flex-direction: column;
+}
+
+.nav-links-mobile .navlink {
+  border-bottom: 1px solid var(--gray);
+}
+
+.nav-links a:hover,
+.nav-links-mobile a:hover {
   background-color: var(--gray);
   color: var(--white);
 }
+
 .menu-icon {
-	position: absolute;
+  position: absolute;
   right: 0px;
   margin: 4px;
-	width: 50px;
-	height: 50px;
-	cursor: pointer;
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
   visibility: hidden;
 
-	.menu-icon__cheeckbox {
-		display: inline-block;
-		width: 100%;
-		height: 100%;
-		position: relative;
-		cursor: pointer;
-		z-index: 2;
-		-webkit-touch-callout: none;
-		opacity: 0;
-	}
-	.bars {
-		margin: auto;
-		position: absolute;
-		top: 0;
-		right: 0;
-		left: 0;
-		bottom: 0;
-		width: 22px;
-		height: 12px;
-	}
-	.bars .bar {
-		position: absolute;
-		display: block;
-		width: 100%;
-		height: 2px;
-		background-color: white;
-		border-radius: 1px;
-		transition: all 0.2s cubic-bezier(0.1, 0.82, 0.76, 0.965);
+  .menu-icon__cheeckbox {
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    cursor: pointer;
+    z-index: 2;
+    -webkit-touch-callout: none;
+    opacity: 0;
+  }
 
-		&:first-of-type {
-			top: 0;
-		}
-		&:last-of-type {
-			bottom: 0;
-		}
-	}
-	&.active,
-	.menu-icon__cheeckbox:checked + .bars {
-		.bar {
-			&:first-of-type {
-				transform: rotate(45deg);
-				top: 5px;
-			}
-			&:last-of-type {
-				transform: rotate(-45deg);
-				bottom: 5px;
-			}
-		}
-	}
+  .bars {
+    margin: auto;
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    width: 22px;
+    height: 12px;
+  }
 
-	&.active:hover .bar:first-of-type,
-	&.active:hover .bar:last-of-type,
-	&:hover .menu-icon__cheeckbox:checked + .bars .bar:first-of-type,
-	&:hover .menu-icon__cheeckbox:checked + .bars .bar:last-of-type {
-		width: 22px;
-	}
+  .bars .bar {
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 2px;
+    background-color: white;
+    border-radius: 1px;
+    transition: all 0.2s cubic-bezier(0.1, 0.82, 0.76, 0.965);
 
-	&:hover {
-		@media (min-width: 1024px) {
-			span:first-of-type {
-				width: 26px;
-			}
+    &:first-of-type {
+      top: 0;
+    }
 
-			span:last-of-type {
-				width: 12px;
-			}
-		}
-	}
+    &:last-of-type {
+      bottom: 0;
+    }
+  }
+
+  &.active,
+  .menu-icon__cheeckbox:checked+.bars {
+    .bar {
+      &:first-of-type {
+        transform: rotate(45deg);
+        top: 5px;
+      }
+
+      &:last-of-type {
+        transform: rotate(-45deg);
+        bottom: 5px;
+      }
+    }
+  }
+
+  &.active:hover .bar:first-of-type,
+  &.active:hover .bar:last-of-type,
+  &:hover .menu-icon__cheeckbox:checked+.bars .bar:first-of-type,
+  &:hover .menu-icon__cheeckbox:checked+.bars .bar:last-of-type {
+    width: 22px;
+  }
+
+  &:hover {
+    @media (min-width: 1024px) {
+      span:first-of-type {
+        width: 26px;
+      }
+
+      span:last-of-type {
+        width: 12px;
+      }
+    }
+  }
 }
 
 
-.btn:not(.exp-btn){
+.btn:not(.exp-btn) {
   color: var(--white);
   border: 1px solid var(--white);
   margin: 20px auto;
 }
-.space{
+
+.space {
   padding: 0px 8px;
 }
+
 .hero {
   width: 100%;
   height: 100vh;
@@ -150,7 +174,8 @@ a:visited {
   margin: 0 auto;
   padding: 10px;
 }
-.hero .h1-bg{
+
+.hero .h1-bg {
   width: 100vw;
   height: 100vh;
   display: flex;
@@ -162,6 +187,7 @@ a:visited {
   filter: drop-shadow(0px 0px 1px var(--white));
 
 }
+
 .hero .vrt-line {
   width: 2px;
   height: 100px;
@@ -178,22 +204,28 @@ a:visited {
   0% {
     background: linear-gradient(to bottom, rgb(27, 195, 233), rgb(0, 48, 103), rgb(220, 235, 242), rgb(0, 255, 217), rgb(40, 61, 77));
   }
+
   25% {
     background: linear-gradient(to bottom, rgb(0, 48, 103), rgb(220, 235, 242), rgb(0, 255, 217), rgb(40, 61, 77), rgb(27, 195, 233));
   }
+
   50% {
     background: linear-gradient(to bottom, rgb(220, 235, 242), rgb(0, 255, 217), rgb(40, 61, 77), rgb(27, 195, 233), rgb(0, 48, 103));
   }
+
   75% {
     background: linear-gradient(to bottom, rgb(0, 255, 217), rgb(40, 61, 77), rgb(27, 195, 233), rgb(0, 48, 103) rgb(220, 235, 242));
   }
+
   90% {
     background: linear-gradient(to bottom, rgb(40, 61, 77), rgb(27, 195, 233), rgb(0, 48, 103) rgb(220, 235, 242), rgb(0, 255, 217));
   }
+
   100% {
     background: linear-gradient(to bottom, rgb(27, 195, 233), rgb(0, 48, 103) rgb(220, 235, 242), rgb(0, 255, 217), rgb(40, 61, 77));
   }
 }
+
 .hero a {
   position: absolute;
   z-index: 1;
@@ -219,6 +251,7 @@ a:visited {
     border-bottom-color: rgb(0, 255, 217);
     border-left-color: rgb(40, 61, 77);
   }
+
   25% {
     background: linear-gradient(to right, rgb(0, 48, 103), rgb(220, 235, 242), rgb(0, 255, 217), rgb(40, 61, 77), rgb(27, 195, 233));
     -webkit-background-clip: text;
@@ -227,6 +260,7 @@ a:visited {
     border-bottom-color: rgb(40, 61, 77);
     border-left-color: rgb(27, 195, 233);
   }
+
   50% {
     background: linear-gradient(to right, rgb(220, 235, 242), rgb(0, 255, 217), rgb(40, 61, 77), rgb(27, 195, 233), rgb(0, 48, 103));
     -webkit-background-clip: text;
@@ -235,6 +269,7 @@ a:visited {
     border-bottom-color: rgb(27, 195, 233);
     border-left-color: rgb(0, 48, 103);
   }
+
   75% {
     background: linear-gradient(to right, rgb(0, 255, 217), rgb(40, 61, 77), rgb(27, 195, 233), rgb(0, 48, 103) rgb(220, 235, 242));
     -webkit-background-clip: text;
@@ -243,6 +278,7 @@ a:visited {
     border-bottom-color: rgb(0, 48, 103);
     border-left-color: rgb(0, 255, 217);
   }
+
   90% {
     background: linear-gradient(to right, rgb(40, 61, 77), rgb(27, 195, 233), rgb(0, 48, 103) rgb(220, 235, 242), rgb(0, 255, 217));
     -webkit-background-clip: text;
@@ -251,6 +287,7 @@ a:visited {
     border-bottom-color: rgb(40, 61, 77);
     border-left-color: rgb(27, 195, 233);
   }
+
   100% {
     background: linear-gradient(to right, rgb(27, 195, 233), rgb(0, 48, 103) rgb(220, 235, 242), rgb(0, 255, 217), rgb(40, 61, 77));
     -webkit-background-clip: text;
@@ -260,6 +297,7 @@ a:visited {
     border-left-color: rgb(40, 61, 77);
   }
 }
+
 .hero video {
   object-fit: cover;
   width: 100vw;
@@ -282,26 +320,33 @@ section {
   min-width: 120px;
   padding: 20px;
 }
-.card-img-top{
+
+.card-img-top {
   width: 14vw;
   margin: 0px auto;
   border-radius: 6px;
   object-fit: cover;
 }
-.card .btn{
+
+.card .btn {
   border: 2px solid var(--header-black);
   color: var(--header-black);
 }
-.card .btn:hover{
+
+.card .btn:hover {
   font-weight: 900;
 }
-.card-heading, .card h5{
+
+.card-heading,
+.card h5 {
   font-size: 2vw;
   font-weight: 900;
 }
-.card-text{
+
+.card-text {
   font-size: 2vw;
 }
+
 .card:hover {
   animation: shadow-pop-bottom-left 0.2s;
 }
@@ -316,75 +361,102 @@ section {
   transform: translateX(8px) translateY(-8px);
   transition-duration: 1s;
 }
-.firstsec .heading, .firstsec .para-1st, .firstsec .para-2nd, .firstsec .our-promise, .firstsec .svg-1st, .secondsec-para, .founders-btn{
+
+.firstsec .heading,
+.firstsec .para-1st,
+.firstsec .para-2nd,
+.firstsec .our-promise,
+.firstsec .svg-1st,
+.secondsec-para,
+.founders-btn {
   opacity: 0;
 }
-.firstsec .heading.animate__animated, .firstsec .para-1st.animate__animated, .firstsec .para-2nd.animate__animated, .firstsec .our-promise.animate__animated, .firstsec .svg-1st.animate__animated, .secondsec-para.animate__animated, .founders-btn.animate__animated{
+
+.firstsec .heading.animate__animated,
+.firstsec .para-1st.animate__animated,
+.firstsec .para-2nd.animate__animated,
+.firstsec .our-promise.animate__animated,
+.firstsec .svg-1st.animate__animated,
+.secondsec-para.animate__animated,
+.founders-btn.animate__animated {
   opacity: 1;
 }
-.firstsec ,.secondsec{
+
+.firstsec,
+.secondsec {
   padding-top: 60px;
   margin: 50px auto;
 }
-.firstsec .heading{
+
+.firstsec .heading {
   margin-top: 20px;
   padding-left: 40px;
   font-weight: 900;
 }
-.firstsec .span-1st{
+
+.firstsec .span-1st {
   font-weight: 900;
   font-size: 58px;
 }
-.firstsec .para-1st, .firstsec .para-2nd{
+
+.firstsec .para-1st,
+.firstsec .para-2nd {
   padding: 40px;
   padding-top: 20px;
   font-size: var(--section-font-size);
   text-align: justify;
 }
-.firstsec .our-promise{
-  font-weight : 900;
+
+.firstsec .our-promise {
+  font-weight: 900;
   padding-left: 40px;
 }
-.firstsec .svg-1st{
+
+.firstsec .svg-1st {
   margin-bottom: 20px;
 }
 
 @media only screen and (max-width:768px) {
-  .firstsec .heading, .firstsec .our-promise{
+
+  .firstsec .heading,
+  .firstsec .our-promise {
     font-size: 23px;
     margin: 0 auto;
   }
-  .firstsec .span-1st{
+
+  .firstsec .span-1st {
     font-size: 32px;
   }
-  .firstsec .para-1st, .firstsec .para-2nd, .secondsec p{
-    margin : 0 auto;
+
+  .firstsec .para-1st,
+  .firstsec .para-2nd,
+  .secondsec p {
+    margin: 0 auto;
     width: 100%;
     font-size: 14px;
   }
-  .menu-icon{
+
+  .menu-icon {
     visibility: visible;
   }
-  .nav-links{
+
+  .nav-links {
     display: none;
-    border: 1px solid red;
-    background-color: var(--gray);
-    position: relative;
   }
 }
 
-.secondsec{
+.secondsec {
   padding: 40px;
   padding-top: 60px;
   font-size: var(--section-font-size);
   text-align: justify;
 }
-.secondsec h1{
+
+.secondsec h1 {
   font-weight: 900;
 }
-.founders{
+
+.founders {
   background-color: var(--gray);
   border-radius: 3px;
 }
-
-
