--- a/styles.css
+++ b/styles.css
@@ -147,12 +147,18 @@ a:visited {
 }
 
 
-.btn:not(.exp-btn) {
+.product-btn,
+.founders-btn {
   color: var(--white);
   border: 1px solid var(--white);
   margin: 20px auto;
 }
 
+.product-btn:hover,
+.founders-btn:hover {
+  color: var(--white);
+  background-color: var(--gray);
+}
 .space {
   padding: 0px 8px;
 }
@@ -383,7 +389,8 @@ section {
 }
 
 .firstsec,
-.secondsec {
+.secondsec,
+.products {
   padding-top: 60px;
   margin: 50px auto;
 }
@@ -430,7 +437,8 @@ section {
 
   .firstsec .para-1st,
   .firstsec .para-2nd,
-  .secondsec p {
+    .secondsec p,
+    .products p {
     margin: 0 auto;
     width: 100%;
     font-size: 14px;
@@ -445,18 +453,78 @@ section {
   }
 }
 
-.secondsec {
+.secondsec,
+.products {
   padding: 40px;
   padding-top: 60px;
   font-size: var(--section-font-size);
   text-align: justify;
 }
 
-.secondsec h1 {
+.secondsec h1,
+.products h1 {
   font-weight: 900;
+  font-size: 4vw;
 }
 
 .founders {
   background-color: var(--gray);
   border-radius: 3px;
+}
+
+.logo-container {
+  width: 10vw;
+  border-radius: 50px;
+  animation: wobble 6s infinite normal;
+}
+
+.product-img {
+  object-fit: fill;
+  overflow: hidden;
+  width: 10vw;
+  border-radius: 50%;
+  animation: scale 2s infinite normal;
+}
+
+@keyframes scale {
+  0% {
+    transform: scale(1);
+  }
+
+  50% {
+    transform: scale(1.2);
+  }
+
+  100% {
+    transform: scale(1);
+  }
+}
+
+@keyframes wobble {
+
+  0%,
+  100% {
+    transform: translateX(0);
+    transform-origin: 50% 50%
+  }
+
+  15% {
+    transform: translateX(-20px) rotate(-6deg)
+  }
+
+  30% {
+    transform: translateX(15px) rotate(6deg)
+  }
+
+  45% {
+    transform: translateX(-15px) rotate(-3.6deg)
+  }
+
+  60% {
+    transform: translateX(9px) rotate(2.4deg)
+  }
+
+  75% {
+    transform: translateX(-6px) rotate(-1.2deg)
+  }
 }
